Fix Vercel routing: Simplify vercel.json and add Vercel compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "build/**",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -16,12 +12,8 @@
       "dest": "/server.js"
     },
     {
-      "src": "/images/(.*)",
-      "dest": "/public/images/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/build/$1"
+      "dest": "/server.js"
     }
   ]
 }
