--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pm2:stop": "pm2 stop soventur",
     "pm2:restart": "pm2 restart soventur",
     "pm2:logs": "pm2 logs soventur",
+    "vercel-build": "npm run build",
     "vercel-start": "node server.js"
   },
   "eslintConfig": {
