--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/blob": "^1.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
